@@ -1743,11 +1743,13 @@ for (let key in TYPES) {
  *
  * @param {Object|String} config Connection configuration object or connection string.
  * @param {basicCallback} [callback] A callback which is called after connection has established, or an error has occurred. If omited, method returns Promise.
- * @return {ConnectionPool|Promise}
+ * @return {Promise.<ConnectionPool>}
  */
 
 module.exports.exports.connect = function connect (config, callback) {
-  if (globalConnection) throw new Error('Global connection already exists. Call sql.close() first.')
+  if (globalConnection) {
+    return PromiseLibrary.resolve(globalConnection)
+  }
   globalConnection = new driver.ConnectionPool(config)
 
   for (let event in globalConnectionHandlers) {
