@@ -2,6 +2,7 @@ v6.0.0 (2019-0?-??)
 -------------------
 [new] Added `healthy` flag to the pool to help determine if the pool is safe to use or not ([#816](https://github.com/tediousjs/node-mssql/pull/816))
 [new] Invalid isolation levels passed to transactions will now throw an error
+[new] Calls to the global `connect` function will return the global connection if it exists
 [change] Closing the global connection by reference will now cleanup the internally managed globalConnection
 [change] Upgraded tedious to v6 ([#818](https://github.com/tediousjs/node-mssql/pull/818))
 [change] Remove references to deprecated `TYPES.Null` from tedious
